# EchoZero

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_SUMMARY.md  COHERENCE.md  GLOSSARY.md  INSTALLATION.md  README.md  SPEC.txt  STYLE.md  TODO.txt  Untitled  command.py  command_module.py  command_parser.py  command_updated.py  echozero.spec  feedback.py  ideas.txt  listen.py  main.py  main_qt.py  main_v2.py  message.py  metadata.json  mkdocs.yml  objects.txt  package-lock.json  packaging_config.json  playhead.js  project.py  project_data.json  pyproject.toml  pytest.ini  readme.txt  readthedocs.yaml  recent_projects.json  rename_script.py  (+12 more)
*** Depricated ***/: AnalyzeAudioBlock.py  ExportMA3Block.py  OnsetDetection.py  TransformAudioBlock.py  listen.py  part.py
.cursor/: ai_context_extension.js  ai_context_hook.py  ai_prompt_enhancer.py  ai_system_prompt.md  centralized_settings_load_export_plan_9006bf25.plan.md  context_injector.py  echozero_helper.py  extensions.json  hooks.py  keybindings.json  package.json  settings.json  startup.py  tasks.json
.github/: dependabot.yml  pull_request_template.md
AgentAssets/: .gitkeep  CORE_VALUES.md  MA3_INTEGRATION_PITFALLS.md  README.md
Block/: block.py  part.py  port.py
Command/: __init__.py  command.py  command_controller.py  command_item.py  command_module.py  command_parser.py  digest.py
Connections/: connection.py  port.py
Container/: container.py
Control/: ControlLanguage.py  __init__.py  audio_transformation.py  controller.py  load_audio.py
Data/: data.py  data_controller.py
DataTypes/: audio_data_type.py  data_type.py  event_data_type.py  event_item_type.py
Load/: load_controller.py
MA3/: MA3_INTEGRATION_PITFALLS.md  README.md
Model/: __init__.py  audio.py  event.py  load_audio.py  main_model.py  stem.py  tools.py  transformations.py  utils.py
Point/: __init__.py  point.py
Port/: port.py  port_controller.py
Project/: project.py
Save/: save_controller.py
Utils/: message.py  recent_projects.json  tools.py
aa Depricated/: audio_model.py  event_pool.py  main_model.py  stem.py  transformations.py
assets/: keyboardShortcuts.js  welcome_phrases.txt
data/: application.db  echozero.db  recent_projects.json
docs/: AGENT-CONTEXT.md  AGENT-WORKFLOW.md  ALPHA-EXECUTION-PLAN-2026-04-13.md  ALPHA-GAP-MATRIX-2026-04-13.md  ALPHA-UI-CONTRACT.md  APP-DELIVERY-PLAN.md  APPFLOW-TEST-ARCHITECTURE-AUDIT-2026-04-12.md  APPFLOW-TOTAL-SUMMARY-2026-04-13.md  ARCHITECTURE-2026-03-22.md  ARCHITECTURE-NOTE.md  ARCHITECTURE.md  AUTOMATION-SURFACE-POLICY.md  AUTONOMOUS-E2E-CONTROL-PLAN-2026-04-06.md  BACKLOG-CLEARANCE-PLAN.md  CANONICAL-REVIEW-FOUNDATION-PLAN.md  CONTRIBUTING.md  DELETION_AUDIT_SUMMARY.md  DEMO-SUITE-AUDIT-PLAN-2026-04-13.md  DESIGN_SYSTEM.md  DEV-LANES.md  DEVELOPMENT-TRACKER.md  DISTILLATION-CONFORMANCE-AUDIT-2026-04-04.md  EXECUTION-PLAN.md  EZ2-CODEBASE-CLEANUP-MAP.md  EZ2-PLAYBACK-CHURN-STRESS-2026-04-07.md  EZ2-PLAYBACK-JITTER-ROOTCAUSE-2026-04-07.md  FOUNDRY-ECHOZERO-SHARED-INFERENCE-EVAL-FRAMING-2026-04-10.md  FOUNDRY-TASK-QUEUE.md  FOUNDRY-TRAINING.md  GETTING-STARTED.md  GUI-INPUT-DEMO-CHECKLIST.md  GUI-INPUT-DEMO-PRD.md  HUMAN-TASK-INVENTORY.md  HUMAN-TASK-TESTS.md  INSPECTOR-CONTRACT-PASS1-2026-04-07.md  LAUNCH-REMEDIATION-TASK-BOARD.md  LD-WORKFLOW.md  LLM-CLEANUP-BOARD.md  MA3-BATCH-TRANSFER-UX-SPEC.md  MA3-MANUAL-PUSH-PULL-IMPLEMENTATION-PLAN.md  (+76 more)
echozero/: __init__.py  bootstrap.py  cache.py  commands.py  coordinator.py  domain.py  errors.py  event_bus.py  execution.py  main.py  perf.py  pipeline.py  progress.py  project.py  result.py  serialization.py  takes.py
ma3_plugins/: README.md
packaging/: EchoZero.icns  README.md
scripts/: build-dev-release.ps1  build-test-release.ps1  build_app.py  build_foundry_dashboard.py  check_architecture_boundaries.py  check_canonical_launcher.py  check_changed_python_style.py  check_lane_ownership.py  check_pr_requirements.py  check_repo_hygiene.py  check_timeline_feel_guardrails.py  cleanup_debug_logs.py  dev_bootstrap.py  docs_audit.py  extract_golden.py  foundry-train-folder.ps1  generate_docs.py  inspect_ez.py  inspect_pth_model.py  migrate_datasets.py  migrate_docs.py  obs_demo_capture.py  phase3_ld01_evidence_pack.py  refresh_foundry_tracking.py  reset_auth.py  run-appflow-gates.ps1  run-demo-scenario.ps1  run-foundry-ui.ps1  run-full-demo-suite.ps1  run_beefy_batch.py  run_e2e_scenario.py  run_focus_kick_snare_batch.py  (+10 more)
(+1719 files in other folders)
