[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echozero"
version = "2.0.0-dev"
description = "Desktop audio analysis and event editing workstation for live production"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Griffin Dennen", email = "griffin@813creative.net" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "librosa>=0.10",
    "soundfile>=0.12",
    "sounddevice>=0.4",
    "PyQt6>=6.5",
]

[project.scripts]
echozero = "run_echozero:main"
echozero-foundry = "echozero.foundry.ui.main_window:run_foundry_ui"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
    "mypy>=1.5",
    "black>=23.7",
    "isort>=5.12",
    "pre-commit>=3.7",
    "python-osc>=1.8.0",
]
ml = [
    "demucs>=4.0.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "scikit-learn>=1.3.0",
]
packaging = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyinstaller>=6.18.0",
    "pyinstaller-hooks-contrib",
]

[tool.setuptools]
include-package-data = true
py-modules = ["run_echozero"]

[tool.setuptools.packages.find]
where = [".", "packages/ui_automation/src"]
include = ["echozero", "echozero.*", "ui_automation", "ui_automation.*"]

[tool.setuptools.package-data]
echozero = [
    "foundry/contracts/*.json",
    "testing/e2e/scenarios/*.json",
    "ui/qt/timeline/fixtures/*.json",
]
ui_automation = ["py.typed"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 99
known_first_party = ["echozero", "ui_automation"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "golden: marks golden file snapshot tests",
]

[tool.coverage.run]
source = ["echozero", "ui_automation"]
omit = ["echozero/ui/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
